--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -1,5 +1,6 @@
 .new-counter {
-    margin: .5em 1em;
+    padding: .5em 1em;
+    flex: 1;
 }
 
 .button {
@@ -7,6 +8,8 @@
     padding: 5px;
     height: 10em;
     width: 10em;
+    border: 2px solid black;
+    background-color: darkgray;
 }
 
 .count {
