--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -5,11 +5,11 @@
 
 .button {
     border-radius: 50%;
-    padding: 5px;
-    height: 10em;
-    width: 10em;
+    height: 8rem;
+    width: 8rem;
     border: 2px solid black;
     background-color: darkgray;
+    font-size: 42px;
 }
 
 .count {
